syntax = "proto3";
package proto;

option go_package = "github.com/nghuyenthevinh2000/bitcoin-playground/wsts";

message MsgUpdateVP {
    int64 source = 1;
    bytes vp = 2;
}

message MsgUpdateProofs {
    int64 source = 1;
    bytes secret_proofs = 2;
    repeated bytes polynomial_commitments = 3;
}

message MsgSecretShares {
    int64 source = 1;
    repeated SecretShares secret_shares = 2;
}

message SecretShares {
    int64 posi = 1;
    bytes secret_shares = 2;
}

message MsgUpdateNonceCommitments {
    int64 source = 1;
    repeated NonceCommitments nonce_commitments = 2;
}

message NonceCommitments {
    bytes d = 1;
    bytes e = 2;
}

message MsgWithdraw {
    string receiver = 1;
    int64 amount = 2;
}

message MsgBatchWithdraw {
    repeated MsgWithdraw withdraw_batch = 1;
}

message BtcCheckPoint {
    int64 height = 1;
    string out_hash = 2;
    uint32 out_index = 3;
}

message MsgUpdateAdaptSig {
    int64 source = 1;
    bytes adapt_sig = 2;
}